--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -3,3 +3,20 @@
     --light-gray: #e5e5e5;
     --lightest-gray: #efefef;
 }
+
+#wpwrap {
+    background-color: #e5e5e5;
+    background-color: var(--light-gray);
+}
+
+#adminmenu > li:hover .wp-menu-image img,
+#adminmenu .current .wp-menu-image img {
+    opacity: 1;
+}
+
+#adminmenu .wp-menu-image img {
+    padding: 2px 0 0 0;
+}
+.wp-menu-image > img {
+    width: 30px;
+}
