Update dashboard and styles

--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -190,7 +190,7 @@ html.wp-toolbar {
   #wpadminbar .quicklinks .menupop ul li a strong,
   #wpadminbar .quicklinks .menupop.hover ul li a,
   #wpadminbar.nojs .quicklinks .menupop:hover ul li a {
-    color: #c00; }
+    color: #006ada; }
   
   #wpadminbar .quicklinks .menupop ul li a:focus,
   #wpadminbar .quicklinks .menupop ul li a:focus strong,
