--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -1415,6 +1415,11 @@ html.wp-toolbar {
       left: 200px !important;
     }
   }
+  @media (min-width:960px) {
+     .auto-fold .components-notice-list {
+       left: 200px;
+     }
+  }
   @media (min-width:600px) {
     .edit-post-sidebar {
       top: 130px !important;
