Add site dropdown for non-admin network users

--- a/assets/css/admin-style.css
+++ b/assets/css/admin-style.css
@@ -1387,16 +1387,16 @@ html.wp-toolbar {
   /* Footer */
   /* *********************** */
   #wpfooter {
-    background: #444343;
-    color: #999;
+    /* background: #444343; */
+    /* color: #999; */
     margin-left: 200px; }
   
-  #wpfooter a {
+  /* #wpfooter a {
     color: #999;
     text-decoration: underline; }
   
   #wpfooter a:hover {
-    color: #fff; }
+    color: #fff; } */
 
   /* Gutenberg */
   @media (min-width:782px) {
